# my-meeting-recording

./: .gitignore  CLAUDE.md  Makefile  PROJECT_SUMMARY.md  README.md  config.example.json  constitution.md  main.py  pyproject.toml
internal/: __init__.py
internal/api/: __init__.py  dependencies.py  models.py  routes.py
internal/domain/: __init__.py  meeting.py  summary.py  template.py  transcription.py
internal/llm/: __init__.py  base.py  doubao.py  doubao_enhanced.py  factory.py  universal.py
internal/repositories/: __init__.py  base.py  meeting.py  summary.py  template.py  transcription.py
internal/services/: __init__.py  audio_cleaner.py  audio_processor.py  llm_summarizer.py  llm_transcriber.py  state_machine.py
internal/utils/: __init__.py  config.py  error.py  export.py
migrations/: 001_init_schema.sql
scripts/: init_templates.py  migrate.py  scheduler.py  simple_verify.py  verify.py
specs/001-core-functionality/: plan.md  spec.md  tasks.md
static/: detail.html  history.html  index.html  settings.html
static/css/: styles.css
static/js/: app.js  detail.js  history.js  settings.js
tests/: conftest.py
tests/e2e/: test_api_flow.py
tests/integration/: test_database.py
tests/unit/domain/: test_meeting.py  test_summary.py  test_template.py  test_transcription.py
tests/unit/repositories/: test_base.py  test_meeting_repo.py  test_summary_repo.py  test_transcription_repo.py
