[project]
name = "my-meeting-recording"
version = "0.1.0"
description = "AI-powered meeting recording and transcription tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

llm = [
    "volcengine>=1.0.0",  # 豆包
    "dashscope>=1.14.0",  # 千问
    "anthropic>=0.25.0",  # Claude
    "openai>=1.12.0",     # OpenAI
    "zhipuai>=2.0.0",     # 智谱GLM
    "aiohttp>=3.9.0",     # HTTP client for audio upload
]

scheduler = [
    "schedule>=1.2.0",     # 定时任务调度
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
